fixing combobox on tablet and checkbox

--- a/omod/src/main/compass/sass/tablet-style/checkbox.scss
+++ b/omod/src/main/compass/sass/tablet-style/checkbox.scss
@@ -1,16 +1,18 @@
 [type="checkbox"].checkbox {
   @include check-box; 
   padding: 15px;
+  outline: none;
 
   &:checked:after {
-  	font-size: 2.5em;
+  	font-size: 2em;
   	color: $grey1;
+    outline: none;
   }
 
   & + label {
     vertical-align: top;
-	font-size: 1.7em;
-	font-family: "OpenSansBold";
-	color: $grey1;
+	  font-size: 1.7em;
+	  font-family: "OpenSansBold";
+	  color: $grey1;
   }
 }
