--- a/omod/src/main/compass/sass/tablet-style/select.scss
+++ b/omod/src/main/compass/sass/tablet-style/select.scss
@@ -10,9 +10,6 @@
       right: 4px;
       top: -1px;
       content: "\f0d7";
-      font-weight: normal;
-      font-style: normal;
-      text-decoration: inherit;
       font-family: "FontAwesome";
       pointer-events: none;
       margin-top: 5px;
